<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app_definitivo_prin"
    tools:context=".Activity_Redes_Lv3">

    <TextView
        android:id="@+id/tv_color5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#773333"
        android:padding="12sp"
        android:text="@string/Color_padding"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_18"
        android:layout_width="216dp"
        android:layout_height="346dp"
        android:layout_marginBottom="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circuloicono___copia" />

    <TextView
        android:id="@+id/textView_3"
        android:layout_width="371dp"
        android:layout_height="172dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/foto_text_view"
        android:text="@string/tv_Inforlv3"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color5" />

    <CheckBox
        android:id="@+id/checkBox_31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_31"
        android:text="@string/CB_RedesRedInter"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_3" />

    <CheckBox
        android:id="@+id/checkBox_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_32"
        android:text="@string/CB_RedesRedInfor"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_31" />

    <CheckBox
        android:id="@+id/checkBox_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_33"
        android:text="@string/CB_RedesLocal"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_32" />
</androidx.constraintlayout.widget.ConstraintLayout>