<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app_definitivo_prin"
    tools:context=".Activity_Redes_Lv1">

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="371dp"
        android:layout_height="172dp"
        android:layout_marginTop="60dp"
        android:autoText="false"
        android:background="@drawable/foto_text_view"
        android:paddingTop="10sp"
        android:text="@string/tv_redeslv1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color3" />

    <TextView
        android:id="@+id/tv_color3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#773333"
        android:padding="12sp"
        android:text="@string/Color_padding"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_7"
        android:layout_width="216dp"
        android:layout_height="346dp"
        android:layout_marginBottom="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circuloicono___copia" />

    <CheckBox
        android:id="@+id/checkBox_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#9C27B0"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_11"
        android:text="@string/CB_RedesServer"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_1" />

    <CheckBox
        android:id="@+id/checkBox_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_12"
        android:text="@string/CB_RedesClient"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_11" />

    <CheckBox
        android:id="@+id/checkBox_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:buttonTint="#FFFFFF"
        android:onClick="Checkbox_13"
        android:text="@string/CB_RedesVPN"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_12" />
</androidx.constraintlayout.widget.ConstraintLayout>